src/tests/snapshots/amber__tests__optimizing__unused_variables_array_index.ab__bash-3.2.snap
---
source: src/tests/optimizing.rs
expression: output
---
array_0=(1 2 3 4)
i_1=2
echo "${array_0[$(( (${i_1}) < 0 ? ${#array_0[@]} + (${i_1}) : (${i_1}) ))]}"
