src/tests/snapshots/amber__tests__optimizing__unused_variables_array_index.ab__ksh.snap
---
source: src/tests/optimizing.rs
expression: output
---
array_0=(1 2 3 4)
i_1=2
(( ( ${i_1} >= 0 && ${i_1} < ${#array_0[@]} ) || ( ${i_1} < 0 && ${i_1} >= -${#array_0[@]} ) )) || { echo "Index out of bounds (at unknown:3:12)" >&2; exit 1; }
echo "${array_0[${i_1}]}"
