src/tests/snapshots/amber__tests__optimizing__unused_variables_array_index.ab__zsh.snap
---
source: src/tests/optimizing.rs
expression: output
---
array_0=(1 2 3 4)
i_1=2
echo "${array_0[${i_1}]:?"Index out of bounds"}"
